--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -28,10 +28,13 @@ body:
       description: Please add a clear and concise description of what you want to happen.
     validations:
       required: true
-  - type: alternatives
+  - type: textarea
+    id: alternatives
     attributes:
       label: Describe alternatives you've considered
       description: Please add a clear and concise description of any alternative solutions or features you've considered.
+    validations:
+      required: true
   - type: checkboxes
     id: terms
     attributes:
