--- a/.github/workflows/file-sync.yml
+++ b/.github/workflows/file-sync.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Run GitHub File Sync
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
-          GH_PLAT: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }}
           PR_LABELS: BuildAutomation
