--- a/.github/workflows/file-sync.yml
+++ b/.github/workflows/file-sync.yml
@@ -9,10 +9,12 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Disable symlinks
-        run: git config --global core.symlink false
       - name: Checkout Repository
         uses: actions/checkout@v2.4.2
+      - name: Copy needed files
+        run: |
+          Copy-Item ".github/ISSUE_TEMPLATE/config.yml" ".github/ISSUE_TEMPLATE/private/"
+        shell: pwsh
       - name: Run GitHub File Sync
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
