Added basic renovate json file

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -3,6 +3,9 @@ group:
   - files:
       - source: .github/workflows/label-sync.yml
         dest: .github/workflows/label-sync.yml
+      - source: renovate.json
+        dest: renovate.json
+        replace: false
     repos:
       WormieCorp/ImageGallery
   - files:
