--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -6,7 +6,7 @@ group:
       - source: renovate.json
         dest: renovate.json
         replace: false
-    repos:
+    repos: |
       WormieCorp/ImageGallery
       WormieCorp/MyGameList
   - files:
