--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,3 +1,5 @@
+- name: "-1 - Testing"
+  color: "eeeeee"
 - name: "0 - Backlog"
   color: "CCCCCC"
   description: "Issue is accepted, but is not ready to be worked on or not in current sprint"
