--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -15,10 +15,10 @@
   color: "d73a4a"
   description: "Issues where something had happened which was not expected or intended"
   aliases: ["bug"]
-- name: "Build Automation"
+- name: "Build"
   color: "0052cc"
   description: "Issues for changes to the build system, without functional changes needed to the project"
-  aliases: ["BuildAutomation", "Build"]
+  aliases: ["BuildAutomation", "Build Automation"]
 - name: "Detail Required"
   color: "9C772F"
   description: "Issues that requires more information about the a problem detected or a feature requested"
