--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -7,6 +7,8 @@ group:
       - source: renovate.json
         dest: renovate.json
         replace: false
+      - source: CCVARN.yml
+        dest: CCVARN.yml
     repos: |
       WormieCorp/ImageGallery
       WormieCorp/MyGameList
