--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -2,11 +2,11 @@
   color: "CCCCCC"
   description: "Issue is accepted, but is not ready to be worked on or not in current sprint"
 - name: "0 - _Triaging"
-  color: "EEEEEE"
+  color: "eeeeee"
   description: "Issue is accepted, but a milestone has yet to be added for the issue"
   aliases: ["triage", "_triage", "0 - Triaging"]
 - name: "0 - Waiting on User"
-  color: "AABBDD"
+  color: "aabbdd"
   description: "Insufficient information for issue or PR, issue may be closed if no response from user"
 - name: "1 - Ready"
   color: "CCCCCC"
@@ -30,95 +30,91 @@
   color: "8E44AD"
   description: "Manual tests has not been added for issue - once completed, IN MANUAL TEST SUITE label added"
 - name: "API"
-  color: "207DE5"
+  color: "207de5"
   description: "Issues that handles API changes, not necessarily visible to end users"
 - name: "Bad Pull Request"
-  color: "EB6420"
+  color: "eb6420"
   description: "The pull request opened was not accepted, didn't follow the procedures, or was missing information"
 - name: "Blocked - External"
-  color: "5319E7"
+  color: "5319e7"
   description: "The issue or pull request is not fixable without a change in a upstream/external library"
 - name: "BreakingChange"
-  color: "5319E7"
+  color: "5319e7"
   description: "The issue will introduce backwards incompatible changes"
   aliases: ["Breaking Change"]
 - name: "Bug"
-  color: "D73A4A"
-  description: "Issues where something has happened which was not expected or intended"
+  color: "d73a4a"
+  description: "Issues where something had happened which was not expected or intended"
   aliases: ["bug"]
-- name: "BuildAutomation"
-  color: "0052CC"
+- name: "Build Automation"
+  color: "0052cc"
   description: "Issues for changes to the build system, without functional changes needed to the project"
-  aliases: ["Build Automation", "Build"]
+  aliases: ["BuildAutomation", "Build"]
 - name: "CoreTeam"
-  color: "F7C6C7"
+  color: "f7c6c7"
   description: "Issues that will only be accepeted from the core Chocolatey Team"
 - name: "Customer"
-  color: "006B75"
+  color: "006b75"
   description: "Bug reported or feature requested by a licensed customer of Chocolatey"
 - name: "Detail Required"
   color: "9C772F"
-  description: "The issue requires additional information to know how to implement the feature, or more information to fix the bug"
 - name: "Documentation"
-  color: "BFE5BF"
+  color: "bfe5bf"
   description: "Issues for changes that only need to change documentation"
   aliases: ["documentation"]
 - name: "Duplicate Issue"
-  color: "EB6420"
+  color: "eb6420"
   description: "Issues that are duplicates of other issues"
   aliases: ["duplicate", "duplicates"]
 - name: "Enhancement"
-  color: "0052CC"
+  color: "0052cc"
   description: "Issues that enhances existing functionality, or adds new features"
   aliases: ["enhancement"]
-- name: "Feature"
-  color: "5319E7"
-  description: "Issues that introduce new functionality to the project, instead of updating existing functionality"
-  aliases: ["FeatureParity"]
+- name: "FeatureParity"
+  color: "5319e7"
 - name: "Hacktoberfest"
-  color: "FB9904"
+  color: "fb9904"
   description: "Issues opened during hacktoberfest"
 - name: "hacktoberfest-accepted"
   color: "1D76DB"
   description: "Pull Requests opened during hacktoberfest, and has been accepted by a team member"
-- name: "HasDependency"
+- name: "Has related issue"
   color: "8E44AD"
-  description: "This issue has a related issue that would need to be addressed before this issue can be closed"
-  aliases: ["Has related issue"]
+  description: "This issue has a related issue that would need to be addressed before this issue could be closed."
 - name: "IN MANUAL TEST SUITE"
   color: "8E44AD"
-  description: "These are things that are documented to test as part of a release"
+  description: "These are things that are documented to test as part of a release."
 - name: "IN REGRESSION TEST SUITE"
   color: "8E44AD"
   description: "These are things that are handled by tools like Test-Kitchen"
 - name: "Invalid / Not Issue / No repro / Not Implementing"
-  color: "EB6420"
+  color: "eb6420"
 - name: "invalid"
-  color: "E89819"
+  color: "e89819"
   description: "This is used to mark Hacktoberfest PR's as invalid"
 - name: "NO RELEASE NOTES"
   color: "CCCCCC"
   description: "Should not be included in the release notes - not enhancing or fixing end product"
 - name: "No Response / Stale"
-  color: "EB6420"
+  color: "eb6420"
   description: "Used on issues when additional information is requested, and no response has been given"
 - name: "Priority_HIGH"
-  color: "E11D21"
+  color: "e11d21"
   description: "Issues that are considered to be a high priority to get fixed"
 - name: "Priority_LOW"
-  color: "C7DEF8"
+  color: "c7def8"
   description: "Issues that are low priority, and will most likely only be fixed by the community"
 - name: "Pro/Business"
-  color: "006B75"
+  color: "006b75"
   description: "Issues only relevant for Pro or Business customers"
 - name: "Question"
-  color: "EB6420"
+  color: "eb6420"
   description: "Issues opened for asking questions. These should be converted to discussions"
 - name: "Requires Upstream Change"
   color: "E10D60"
   description: "Requires changes to a different location once issue is fixed or implemented"
 - name: "Security"
-  color: "5319E7"
+  color: "5319e7"
   description: "Issues that are related to security vulnerabilites, or other security related problems"
   aliases: ["security vulnerability"]
 - name: "Tests"
@@ -128,5 +124,5 @@
   color: "159818"
   description: "Issues that are available by the community to work on"
 - name: "Wrong Repository"
-  color: "EB6420"
+  color: "eb6420"
   description: "Issues opened on the wrong repository, and could not be moved"
