--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -58,6 +58,7 @@
   description: "Bug reported or feature requested by a licensed customer of Chocolatey"
 - name: "Detail Required"
   color: "9c772f"
+  description: "The issue requires additional information to know how to implement the feature, or more information to fix the bug"
 - name: "Documentation"
   color: "bfe5bf"
   description: "Issues for changes that only need to change documentation"
