--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,120 +1,120 @@
 - name: "0 - Backlog"
-  color: "cccccc"
+  color: "CCCCCC"
   description: "Issue is accepted, but is not ready to be worked on or not in current sprint"
 - name: "0 - _Triaging"
-  color: "eeeeee"
+  color: "EEEEEE"
   description: "Issue is accepted, but a milestone has yet to be added for the issue"
   aliases: ["triage", "_triage", "0 - Triaging"]
 - name: "0 - Waiting on User"
-  color: "aabbdd"
+  color: "AABBDD"
   description: "Insufficient information for issue or PR, issue may be closed if no response from user"
 - name: "1 - Ready"
-  color: "cccccc"
+  color: "CCCCCC"
   description: "Issue is accepted, milestone added and are ready to be worked on"
 - name: "2 - Working"
-  color: "cccccc"
+  color: "CCCCCC"
   description: "A user or team member has started working on the issue"
 - name: "3 - Review"
-  color: "cccccc"
+  color: "CCCCCC"
   description: "Code has been added, and is available for review as a pull request"
 - name: "4 - Done"
-  color: "cccccc"
+  color: "CCCCCC"
   description: "Code has been added to the repository, and has been reviewed by a team member"
 - name: "5 - Released"
-  color: "cccccc"
+  color: "CCCCCC"
   description: "The issue has been resolved, and released to the public for consumption"
 - name: "ADD AUTO TESTS"
-  color: "8e44ad"
+  color: "8E44AD"
   description: "Things that typically go to Test-Kitchen - once completed, IN REGRESSION TEST SUITE label added"
 - name: "ADD MANUAL TESTS"
-  color: "8e44ad"
+  color: "8E44AD"
   description: "Manual tests has not been added for issue - once completed, IN MANUAL TEST SUITE label added"
 - name: "API"
-  color: "207de5"
+  color: "207DE5"
   description: "Issues that handles API changes, not necessarily visible to end users"
 - name: "Bad Pull Request"
-  color: "eb6420"
+  color: "EB6420"
   description: "The pull request opened was not accepted, didn't follow the procedures, or was missing information"
 - name: "Blocked - External"
-  color: "5319e7"
+  color: "5319E7"
   description: "The issue or pull request is not fixable without a change in a upstream/external library"
 - name: "BreakingChange"
-  color: "5319e7"
+  color: "5319E7"
   description: "The issue will introduce backwards incompatible changes"
   aliases: ["Breaking Change"]
 - name: "Bug"
-  color: "d73a4a"
+  color: "D73A4A"
   description: "Issues where something has happened which was not expected or intended"
   aliases: ["bug"]
 - name: "BuildAutomation"
-  color: "0052cc"
+  color: "0052CC"
   description: "Issues for changes to the build system, without functional changes needed to the project"
   aliases: ["Build Automation", "Build"]
 - name: "CoreTeam"
-  color: "f7c6c7"
+  color: "F7C6C7"
   description: "Issues that will only be accepeted from the core Chocolatey Team"
 - name: "Customer"
-  color: "006b75"
+  color: "006B75"
   description: "Bug reported or feature requested by a licensed customer of Chocolatey"
 - name: "Detail Required"
-  color: "9c772f"
+  color: "9C772F"
 - name: "Documentation"
-  color: "bfe5bf"
+  color: "BFE5BF"
   description: "Issues for changes that only need to change documentation"
   aliases: ["documentation"]
 - name: "Duplicate Issue"
-  color: "eb6420"
+  color: "EB6420"
   description: "Issues that are duplicates of other issues"
   aliases: ["duplicate", "duplicates"]
 - name: "Enhancement"
-  color: "0052cc"
+  color: "0052CC"
   description: "Issues that enhances existing functionality, or adds new features"
   aliases: ["enhancement"]
 - name: "Feature"
-  color: "5319e7"
+  color: "5319E7"
   description: "Issues that introduce new functionality to the project, instead of updating existing functionality"
   aliases: ["FeatureParity"]
 - name: "Hacktoberfest"
-  color: "fb9904"
+  color: "FB9904"
   description: "Issues opened during hacktoberfest"
 - name: "hacktoberfest-accepted"
-  color: "1d76db"
+  color: "1D76DB"
   description: "Pull Requests opened during hacktoberfest, and has been accepted by a team member"
 - name: "HasDependency"
-  color: "8e44ad"
+  color: "8E44AD"
   description: "This issue has a related issue that would need to be addressed before this issue can be closed"
   aliases: ["Has related issue"]
 - name: "IN MANUAL TEST SUITE"
-  color: "8e44ad"
+  color: "8E44AD"
   description: "These are things that are documented to test as part of a release"
 - name: "IN REGRESSION TEST SUITE"
-  color: "8e44ad"
+  color: "8E44AD"
   description: "These are things that are handled by tools like Test-Kitchen"
 - name: "Invalid / Not Issue / No repro / Not Implementing"
-  color: "eb6420"
+  color: "EB6420"
 - name: "invalid"
-  color: "e89819"
+  color: "E89819"
   description: "This is used to mark Hacktoberfest PR's as invalid"
 - name: "NO RELEASE NOTES"
-  color: "cccccc"
+  color: "CCCCCC"
   description: "Should not be included in the release notes - not enhancing or fixing end product"
 - name: "No Response / Stale"
-  color: "eb6420"
+  color: "EB6420"
   description: "Used on issues when additional information is requested, and no response has been given"
 - name: "Priority_HIGH"
-  color: "e11d21"
+  color: "E11D21"
   description: "Issues that are considered to be a high priority to get fixed"
 - name: "Priority_LOW"
-  color: "c7def8"
+  color: "C7DEF8"
   description: "Issues that are low priority, and will most likely only be fixed by the community"
 - name: "Pro/Business"
   color: "006B75"
   description: "Issues only relevant for Pro or Business customers"
 - name: "Question"
-  color: "eb6420"
+  color: "EB6420"
   description: "Issues opened for asking questions. These should be converted to discussions"
 - name: "Requires Upstream Change"
-  color: "e10d60"
+  color: "E10D60"
   description: "Requires changes to a different location once issue is fixed or implemented"
 - name: "Security"
   color: "5319E7"
