--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -123,3 +123,6 @@
 - name: "Up For Grabs"
   color: "159818"
   description: "Issues that are available by the community to work on"
+- name: "Dependency Change"
+  color: "888F21"
+  description: "If a dependency or bundled binaries are added, removed or updated."
