chore: change the commit prefix for sync

--- a/.github/workflows/file-sync.yml
+++ b/.github/workflows/file-sync.yml
@@ -20,3 +20,4 @@ jobs:
         with:
           GH_PAT: ${{ secrets.GH_PAT }}
           PR_LABELS: Build
+          COMMIT_PREFIX: "chore(sync): "
